[gd_scene load_steps=11 format=3 uid="uid://mvxs0un5xk2s"]

[ext_resource type="Script" uid="uid://rpurqucwcv44" path="res://scenes/boss.gd" id="2_neq0i"]
[ext_resource type="Texture2D" uid="uid://chq568lteu0d8" path="res://assets/New Piskel-1.png.png" id="2_qsl3t"]
[ext_resource type="Texture2D" uid="uid://d0l15f5p71l1t" path="res://assets/Ship_05.png" id="3_wqpjq"]
[ext_resource type="PackedScene" uid="uid://g51wsrys1hsp" path="res://scenes/killzone.tscn" id="6_lfs1x"]
[ext_resource type="AudioStream" uid="uid://k0arf42qlk3v" path="res://assets/Music/Sounds/enemy-hurt.wav" id="7_8eiau"]
[ext_resource type="AudioStream" uid="uid://da6qam7gqurwa" path="res://assets/Music/Sounds/be slowed.wav" id="8_vn2fc"]

[sub_resource type="SpriteFrames" id="SpriteFrames_gqd3i"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wqpjq")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mautr"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ho3mf"]
size = Vector2(14, 13)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7apjh"]
size = Vector2(14, 13)

[node name="boss" type="CharacterBody2D"]
collision_mask = 33
script = ExtResource("2_neq0i")

[node name="AlertIcon" type="Sprite2D" parent="."]
position = Vector2(0, -38)
texture = ExtResource("2_qsl3t")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.043282747, 0.043282747)
sprite_frames = SubResource("SpriteFrames_gqd3i")
animation = &"walk"
autoplay = "walk"

[node name="TargetPoint" type="Node2D" parent="."]
position = Vector2(0, -14)

[node name="GunPivot" type="Node2D" parent="."]
position = Vector2(9, -13)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_mautr")

[node name="Hitbox" parent="." instance=ExtResource("6_lfs1x")]
position = Vector2(-2, 19)
scale = Vector2(1.8000003, 1.8000003)
collision_layer = 16
collision_mask = 32
script = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(1, -11)
shape = SubResource("RectangleShape2D_ho3mf")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(7, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(-7, 0)

[node name="RayCastBottom" type="RayCast2D" parent="."]
position = Vector2(0, -7)
target_position = Vector2(0, 8)

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
target_desired_distance = 20.0

[node name="Hurtbox" type="Area2D" parent="." groups=["enemy_hurtbox"]]
position = Vector2(0, 16)
scale = Vector2(2.2400012, 2.2400012)
collision_layer = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_7apjh")

[node name="HitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_8eiau")
volume_db = 6.746
bus = &"SFX"

[node name="SlowHitSfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_vn2fc")
volume_db = 17.427
bus = &"SFX"

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
